--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -210,7 +210,7 @@ p {
         }
     }
 }
-input[type="text"], textarea{
+input[type="text"], textarea, input[type="password"]{
     display: block;
     border-radius: 5px;
     border: solid 1px;
@@ -218,7 +218,7 @@ input[type="text"], textarea{
     box-sizing:border-box;
     -moz-box-sizing:border-box;
     padding:10px 12px;
-    margin:0 0 20px 0;
+    margin:0 0 10px 0;
     transition:border-color 0.3s ease;
     -webkit-transition:border-color 0.3s ease;
     -moz-transition:border-color 0.3s ease;
@@ -230,6 +230,20 @@ input[type="text"], textarea{
     &:focus{
         outline:none;
         border-color: @sky;
+    }
+}
+.field.required{
+    span{
+        display: none;
+    }
+    &.required span{
+        color:@red;
+        display: inline;
+    }
+    label{
+        color:@sea;
+        font-weight: 500;
+        margin-bottom: 5px;
     }
 }
 .input-container{
