--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -1,8 +1,32 @@
 body.page-profile-settings{
+    section.content{
+        float: left;
+        width: 62%;
+    }
+    aside.additional-menu{
+        float: left;
+        margin-left: 2%;
+        width: 36%;
+        ul{
+            li{
+                margin:3px 0;
+                a{
+                    color: @sea_light;
+                    font: 500 1.4rem Roboto;
+                    text-decoration: none;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+                &.active a{
+                    font-weight: bold;
+                    color:@sea;
+                }
+            }
+        }
+    }
     &.common{
         section.content{
-            float: left;
-            width: 62%;
             .upload-photo{
                 form{
                     .photo-container{
@@ -67,26 +91,168 @@ body.page-profile-settings{
                 }
             }
         }
-        aside.additional-menu{
-            float: left;
-            margin-left: 2%;
-            width: 36%;
-            ul{
-                li{
-                    margin:3px 0;
-                    a{
-                        color: @sea_light;
-                        font: 500 1.4rem Roboto;
-                        text-decoration: none;
-                        &:hover{
-                            text-decoration: underline;
-                        }
-                    }
-                    &.active a{
-                        font-weight: bold;
-                        color:@sea;
+    }
+    &.security{
+        form{
+            .field{
+                float: left;
+                width: 48%;
+                margin-right: 4%;
+                &.confirm-password{
+                    margin-right: 0;
+                }
+            }
+            input[type="submit"]{
+                margin-right: 20px;
+                margin-top: 30px;
+            }
+        }
+    }
+    &.about-me{
+        form{
+            .field.upload{
+                .preview{
+                    float: left;
+                    width: 80px;
+                    min-height:90px;
+                    margin-right: 15px;
+                    border-radius:4px;
+                    -o-border-radius:4px;
+                    -moz-border-radius:4px;
+                    -webkit-border-radius:4px;
+                    overflow: hidden;
+                    img{
+                        display: block;
+                        width: 100%;
                     }
                 }
+                .buttons{
+                    float: left;
+                    width: 38%;
+                    .btn{
+                        margin-bottom: 10px;
+                    }
+                }
+                p{
+                    display: block;
+                    overflow: hidden;
+                    text-align: center;
+                    font-size:1.2rem;
+                    margin-top: 10px;
+                    top: 7px;
+                }
+            }
+            a.add-document-button{
+                margin-top: 15px;
+                text-align: center;
+                font-size:1.2rem;
+                font-weight: 500;
+                background: #e9f7f1;
+                display: block;
+                padding:5px 0;
+                color:@sea_light;
+                text-decoration: none;
+                margin-bottom: 30px;
+                &:hover{
+                    background: #e9f7f1 - #111;
+                    color:@sea;
+                }
+            }
+            .select2-container{
+                width: 40% !important;
+                margin-right: 4%;
+            }
+            section.specialization{
+                .field{
+                    float: left;
+                    width: 48%;
+                    margin:5px 0;
+                    &:nth-child(even){
+                        margin-right: 0;
+                    }
+                    .checkbox{
+                        float: left;
+                        margin-right: 10px;
+                        &.checked + label{
+                            color:@sky;
+                        }
+                    }
+                    label{
+                        display: block;
+                        overflow: hidden;
+                        margin:2px 0;
+                        font-size:500;
+                    }
+                }
+                input[type="text"]{
+                    margin-top: 20px;
+                }
+            }
+            section.education{
+                .university{
+                    .input-container{
+                        overflow: hidden;
+                    }
+                    a#remove-university{
+                        display: block;
+                        float: right;
+                        border-radius:15px;
+                        -o-border-radius:15px;
+                        -moz-border-radius:15px;
+                        -webkit-border-radius:15px;
+                        width: 15px;
+                        height: 15px;
+                        line-height: 15px;
+                        border:solid 3px @sea_light;
+                        text-align: center;
+                        margin-left: 15px;
+                        margin-top: 7px;
+                        i{
+                            color:@sea_light;
+                        }
+                        &:hover{
+                            border-color:@sea;
+                            i{
+                                color:@sea;
+                            }
+                        }
+                    }
+                }
+            }
+            section.professional{
+                .certificate{
+                    .input-container{
+                        overflow: hidden;
+                    }
+                    a#remove-certificate{
+                        display: block;
+                        float: right;
+                        border-radius:15px;
+                        -o-border-radius:15px;
+                        -moz-border-radius:15px;
+                        -webkit-border-radius:15px;
+                        width: 15px;
+                        height: 15px;
+                        line-height: 15px;
+                        border:solid 3px @sea_light;
+                        text-align: center;
+                        margin-left: 15px;
+                        margin-top: 7px;
+                        i{
+                            color:@sea_light;
+                        }
+                        &:hover{
+                            border-color:@sea;
+                            i{
+                                color:@sea;
+                            }
+                        }
+                    }
+                }
+            }
+            input[type="submit"]{
+                margin-right: 20px;
+                margin-top: 30px;
             }
         }
     }
