--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -232,7 +232,7 @@ input[type="text"], textarea, input[type="password"]{
         border-color: @sky;
     }
 }
-.field.required{
+.field{
     span{
         display: none;
     }
