--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -256,4 +256,20 @@ body.page-profile-settings{
             }
         }
     }
+    &.contacts{
+        form{
+            .field{
+                float: left;
+                width: 48%;
+                margin-right: 4%;
+                &.phone{
+                    margin-right: 0;
+                }
+            }
+            input[type="submit"]{
+                margin-right: 20px;
+                margin-top: 30px;
+            }
+        }
+    }
 }
